fix visual issues on mobile

--- a/app/assets/stylesheets/components/_stream.scss
+++ b/app/assets/stylesheets/components/_stream.scss
@@ -1,8 +1,12 @@
 .streamEntryNav {
   display: flex;
-  margin: 0 auto;
-  width: 510px;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
+  @include respond-to(">=medium") {
+    max-width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    transform: translate(-105px, -10px);
+  }
   > * {
     flex: 0 0 auto;
     text-decoration: none;
